--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - h5py==3.7.0
   - imageio==2.34.2
   - hydra-core==1.3.2
+  - conda-build
   - pip:
       - gym >= 0.21.0 , < 0.24.0
       - matplotlib==3.7.5
