--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,24 @@
-name: swg_pytorch
+name: swg_pytorch_toy
 channels:
-  - defaults
-  - conda-forge
+- defaults
+- conda-forge
 
 dependencies:
-  - python==3.9
+  - python==3.11
   - pip==24.0
-  - numpy<=1.26.4, >=1.20.2
-  - cython==0.29.30
-  - tqdm==4.66.6
-  - wandb==0.17.3
-  - einops==0.8.0
-  - scipy>=1.4.1
-  - h5py==3.7.0
-  - imageio==2.34.2
-  - hydra-core==1.3.2
   - conda-build
   - pip:
-      - gym >= 0.21.0 , < 0.24.0
-      - matplotlib==3.7.5
-      - torch>=2.3.1
-      - d4rl @ git+https://github.com/Farama-Foundation/d4rl@master#egg=d4rl #https://github.com/rail-berkeley/d4rl@master#egg=d4rl
-      - mujoco<=3.1.6
-      - dm_control<=1.0.20  #https://github.com/Farama-Foundation/D4RL/issues/236
+    - torch==2.3.1
+    - numpy==1.26.4 
+    - tqdm == 4.66.6
+    - scikit-learn
+    - scipy>=1.4.1
+    - wandb==0.17.3
+    - einops==0.8.0
+    - scipy>=1.4.1
+    - h5py==3.11.0
+    - imageio==2.34.2
+    - imageio[ffmpeg]
+    - matplotlib == 3.9.2
+    - hydra-core == 1.3.2
+    - pandas
